@@ -1,4 +1,4 @@
-rev 14-Apr_01-10_26
+rev 14-Apr_12-17_09
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -349,3 +349,6 @@ Added new language files to fckg/lang/
 
 1 Apr
 Added winstyle option
+
+12 April 
+Support for alternate savedir where dokuwiki root is domain
